--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,8 +9,9 @@
 	width:100%;
 	height:80px;
 	text-indent:-999em;
-    margin-bottom: 5px;
-	background:url(../images/logo_1.png) no-repeat 20px 21px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+	background:url(../images/logo_1.png) no-repeat 0px -12px;
 }
 .logo_main {
 	float: left;
