--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,11 +6,12 @@
 #trueHeader #logo{
 	float:left;
 	display:block;
-	width:100%;
-	height:80px;
+	/*width:100%;  */
+    width: 250px;
+	height:90px;
 	text-indent:-999em;
-    margin-bottom: 0px;
-    margin-top: 0px;
+    margin-bottom: -6px;
+    margin-top: 5px;
 	background:url(../images/logo_1.png) no-repeat 0px -12px;
 }
 .logo_main {
@@ -113,7 +114,7 @@
 	position: relative;
 	text-align: left;
 	z-index: 1001;
-	height: 80px;
+	height: 90px;
 	margin: 0px 0px 0px 0px;
 	float: right;
 }
@@ -136,6 +137,7 @@
 	margin: 0;
 	padding: 32px 16px 32px 18px;
 	text-align: center;
+    margin-top:5px;
 }
 #access .menu ul li a:hover {
 	color: #fff;
@@ -1291,7 +1293,7 @@ ul.footer_social_links {
 	width: 100%;
 	margin-top: 0px;
 	padding: 28px 0px;
-	background: #97b5bf url(../images/page-titlebg.jpg) repeat-y center top;
+	/*background: #97b5bf url(../images/page-titlebg.jpg) repeat-y center top;          */
 }
 .page_title .title {
 	width: 100%;
