--- a/public/js/revolutionslider/rs-plugin/css/settings.css
+++ b/public/js/revolutionslider/rs-plugin/css/settings.css
@@ -459,7 +459,7 @@ border-style:none;
 text-decoration:none;
 width:590px;
 height:3px;
-background: url(../../../../images/sliders/revolution/h-line.png) no-repeat left top;
+background: url(../../../../images/h-line.png) no-repeat left top;
 border-width:0px;
 border-style:none;
 }
