--- a/public/js/sticky-menu/core.css
+++ b/public/js/sticky-menu/core.css
@@ -7,7 +7,7 @@ body{font:12px/28px ;}
 #trueHeader {
 	width:1240px;
 	margin: 0 auto 0 auto;
-	background: rgb(32, 91, 143); /*#2f3132 url(../../images/header-bg.png) repeat left top; */
+	background: #AA3924; /*#2f3132 url(../../images/header-bg.png) repeat left top; */
 }
 
 #header.sticky #trueHeader{position:fixed;top:0}#header.sticky.condensed #trueHeader{padding:0px 0}
