clarified local fonts

--- a/public/css/notosans.css
+++ b/public/css/notosans.css
@@ -1,4 +1,17 @@
 @font-face {
     font-family: NotoSansTraditional;
     src: url(fonts/NotoSansTRegular.otf);
+
 }
+
+@font-face {
+    font-family: "Open Sans";
+    src: url(fonts/OpenSans-Regular.ttf);
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url(fonts/Roboto-Regular.ttf);
+}
+
+
