--- a/public/css/style.css
+++ b/public/css/style.css
@@ -384,7 +384,7 @@ a.button_slider:hover {
 	width: 100%;
 	padding: 30px 0px 90px 0px;
 	font-family: 'Open Sans', sans-serif;
-	text-align: left;
+	text-align: center;
 	border-top: 4px solid #0e5070;
 	background: url(../images/graph-01.png) repeat left top;
 }
@@ -413,6 +413,7 @@ a.button_slider:hover {
 	padding: 14px 22px;
 	border-radius: 5px;
 	border: 3px solid #0e5070;
+    margin-right: 40%;
 }
 .joosa.punch_text01 a.pur_link:hover {
 	color: #fff;
