--- a/public/css/responsive-leyouts.css
+++ b/public/css/responsive-leyouts.css
@@ -557,20 +557,11 @@ a.show_hide{
 	margin-bottom: 0 !important;
 }
 
-/*#trueHeader #logo
-{*/
-	/*margin-top: 18px;*/
-	/*margin-bottom: 10px;*/
-	/*background:url(../images/logo.png) no-repeat center top;*/
-/*}*/
-
 
 #echeck_logo{
-    /*float: left;*/
-    /*position: relative;*/
-    /*background: url(../images/logo_2.png) no-repeat;*/
-    width: 0px !important;
-    height: 0px !important;
+    margin-left: 20%;
+    margin-top: 6%;
+    background: url(../images/logo.png) no-repeat center !important;
 }
 
 .logo_main {
@@ -1153,12 +1144,11 @@ ul.home_fresh_works {
 }
 
 #echeck_logo{
-    /*float: left;*/
-    /*position: relative;*/
-    /*background: url(../images/logo_2.png) no-repeat;*/
-    width: 0px !important;
-    height: 0px !important;
+        margin-left: 10%;
+        margin-top: 6%;
+        background: url(../images/logo.png) no-repeat center !important;
 }
+
 
 .logo_main {
 	width: 100%;
