--- a/public/js/revolutionslider/css/slider_main.css
+++ b/public/js/revolutionslider/css/slider_main.css
@@ -22,9 +22,8 @@ website:   	http://www.themepunch.com
 .tp-banner-container{
 	width:100%;
 	position:relative;
-	padding:0;
 	background-color: #eee;
-
+    margin: auto;
 }
 
 .tp-banner{
